# CameraTraps

./: .gitignore  .gitmodules  .readthedocs.yaml  404.html  ANNOUNCEMENT.md  Dockerfile  INSTALLATION.md  MANIFEST.in  README.md  citation.cff  collaborations.md  ct_utils.py  detection_classification_pipeline_demo.py  download_megadetctor_timing_benchmark_set.bat  environment-api-job-management.yml  environment-api-task-management.yml  environment-classifier-training.yml  environment-classifier.yml  environment-detector-mac-nomkl.yml  environment-detector-mac.yml  environment-detector.yml  environment.yml  gradio_demo_herdnet.py  image_demo_herdnet.py  image_detection_demo_herdnet.ipynb  index.html  megadetector.md  mkdocs.yml  mypy.ini  objects.inv  pylintrc  pyproject.toml  requirements.txt  roadmaps.md  setup.py  sitemap.xml  uploading-to-the-cloud.md  version.txt
.spyproject/: workspace.ini
AirSim/: airsim_images.json  animal_lookup.json  call_environment_loop.py  environment_lookup.json  get_gt_from_images.py  settings.json
PT_FT_classification/: README.md  main.py  requirements.txt
PW_FT_classification/: README.md  __init__.py  environment.yaml  main.py  main_v2.py  requirements.txt
PW_FT_detection/: README.md  config.yaml  environment.yaml  main.py  requirements.txt  utils.py
PytorchWildlife/: __init__.py
active_learning/: README.md  filebased_main.py
airsim/: get_camtrap_images.py
annotations/: add_new_annotations_to_database.py  add_new_annotations_to_database_annotations_batch_3.py  convert_imerit_json_to_coco_json.py  create_new_annotation_json.py  filenames_to_json.py  get_annotation_tool_link.py  get_list_of_ss_gold_standard_ims.py  ims_switched_to_empty.p  make_annotation_image_folder.py  make_ss_annotation_image_folder.py  plot_bounding_boxes.py  plot_imerit_annotations.py  plotiMeritAnnotations.py  readWildCamBoundingBoxes.py
api/: README.md
api_flask_redis/: README.md  camera_trap_flask_api_test.ipynb
archive/: README.md  citation.cff  environment-classifier.yml  environment-detector-m1.yml  index.html  megadetector.md  mypy.ini  prepare_api_output_for_timelapse.py
benchmark/: README.md  benchmark_db_splitting.ipynb  dataset_stats_box_size.ipynb  dataset_stats_species_dist.ipynb  detector_eval.ipynb  eval_empty_classification.ipynb  model_eval_utils.py
build_mkdocs/: index.html
cite/: index.html
classification/: README.md  TUTORIAL.md  aggregate_classifier_probs.py  analyze_classifier_results.ipynb  analyze_failed_images.py  cache_batchapi_outputs.py  create_classification_dataset.py  crop_detections.py  csv_to_json.py  detect_and_crop.py  detect_and_predict_image.py  eval_cct_inception_v4.sh  eval_frozen_graph.py  eval_serengeti_inception_v4.sh  eval_two_class_pr.py  eval_well_inception_v4.sh  evaluate_model.py  export_inference_graph_definition.py  export_inference_graph_serengeit.sh  export_inference_graph_serengeti.sh  export_inference_graph_with_preprocessing.py  freeze_and_optimize_graph.py  freeze_graph.py  generate_html_sample.py  generate_sample_predictions.py  identify_mislabeled_candidates.py  inspect_dataset.ipynb  json_validator.py  map_classification_categories.py  megaclassifier_label_spec.ipynb  merge_classification_detection_output.py  predict_image.py  prepare_classification_script.py  prepare_classification_script_mc.py  run_classifier.py  save_mislabeled.py  test_frozen_graph.py  train_cct_inception_v4.sh  train_cct_mobilenet_v2.sh  train_classifier.py  (+8 more)
collaborators/: index.html
contribute/: index.html
contributors/: index.html
core_features/: index.html
data_management/: README.md  cct_json_to_filename_json.py  cct_json_utils.py  cct_to_csv.py  cct_to_md.py  cct_to_wi.py  coco_to_yolo.py  convert_api_detections_to_pickle.py  create_lila_test_set.py  download_lila_subset.py  generate_crops_from_cct.py  generate_lila_sas_urls.py  get_image_sizes.py  get_lila_species_counts.py  get_lila_species_list.py  make_classification_dataset.py  md_to_coco_starter_code.py  read_exif.py  remove_exif.py  yolo_output_to_md_output.py  yolo_to_coco.py
database_tools/: README.md  add_url_to_database.py  add_width_and_height_to_database.py  analyze_json_database.py  analyze_tfrecords.ipynb  combine_two_json_files.py  cropped_camera_trap_dataset_statistics.py  filenames_to_json.py  make_classification_dataset.py  make_detection_db_for_viewing.py  make_oneclass_json.py  (+2 more)
(+1224 files in other folders)
