[tool.poetry]
name = "megadetector"
version = "0.1.0"
description = "Poetry environment"
authors = ["Benjamin Cretois <benjamin.cretois@nina.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
absl-py = "1.1.0"
aiofiles = "0.8.0"
alembic = "1.7.7"
anyio = "3.6.1"
argcomplete = "2.0.0"
asciidoc = "10.2.0"
asgi-csrf = "0.9"
asgiref = "3.5.2"
asttokens = "2.1.0"
backcall = "0.2.0"
backports-functools-lru-cache = "1.6.4"
blessings = "1.7"
brotlipy = "0.7.0"
cachetools = "5.2.0"
certifi = "2022.9.24"
cffi = "1.15.1"
charset-normalizer = "2.1.1"
click = "8.0.4"
click-default-group = "1.2.2"
cloudpickle = "2.0.0"
colorama = "0.4.6"
comm = "0.1.0"
contourpy = "1.0.6"
cryptography = "38.0.3"
cycler = "0.11.0"
databricks-cli = "0.16.6"
datasette = "0.61.1"
datasette-vega = "0.6.2"
debugpy = "1.6.3"
decorator = "5.1.1"
docker = "5.0.3"
entrypoints = "0.4"
executing = "1.2.0"
flask = "2.1.1"
fonttools = "4.38.0"
gitdb = "4.0.9"
gitpython = "3.1.27"
google-auth = "2.8.0"
google-auth-oauthlib = "0.4.6"
gpustat = "0.6.0"
greenlet = "1.1.2"
grpcio = "1.46.3"
gunicorn = "20.1.0"
h11 = "0.12.0"
httpcore = "0.15.0"
httpx = "0.23.0"
humanfriendly = "10.0"
hupper = "1.10.3"
idna = "3.4"
importlib-metadata = "4.11.3"
importlib-resources = "5.6.0"
ipykernel = "6.18.0"
ipython = "8.6.0"
itsdangerous = "2.1.2"
janus = "1.0.0"
jedi = "0.18.1"
jinja2 = "3.0.3"
jsonpickle = "2.2.0"
jupyter-client = "7.4.7"
jupyter-core = "5.0.0"
kiwisolver = "1.4.4"
markupsafe = "2.1.1"
matplotlib = "3.6.2"
matplotlib-inline = "0.1.6"
mergedeep = "1.3.4"
mlflow = "1.24.0"
munkres = "1.1.4"
nest-asyncio = "1.5.6"
numpy = "1.22.3"
nvidia-ml-py = "11.450.51"
nvidia-ml-py3 = "7.352.0"
nvitop = "0.6.0"
packaging = "21.3"
pandas = "1.4.2"
parso = "0.8.3"
patsy = "0.5.3"
pexpect = "4.8.0"
pickleshare = "0.7.5"
pillow = "9.1.0"
pint = "0.19.2"
pip = "22.3.1"
pipx = "1.0.0"
platformdirs = "2.5.2"
pluggy = "1.0.0"
plumbum = "1.7.2"
ply = "3.11"
prometheus-client = "0.14.0"
prometheus-flask-exporter = "0.20.1"
prompt-toolkit = "3.0.33"
protobuf = "3.19.4"
psutil = "5.9.1"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycparser = "2.21"
pygments = "2.13.0"
pyopenssl = "22.1.0"
pyparsing = "3.0.9"
pyqt5 = "5.12.3"
pyqt5-sip = "4.19.18"
pyqtchart = "5.12"
pyqtwebengine = "5.12.1"
pysocks = "1.7.1"
python-baseconv = "1.2.2"
python-dateutil = "2.8.2"
python-multipart = "0.0.5"
pytz = "2022.6"
pyyaml = "6.0"
pyzmq = "24.0.1"
querystring-parser = "1.2.4"
requests = "2.28.1"
requests-oauthlib = "1.3.1"
rfc3986 = "1.5.0"
rsa = "4.8"
seaborn = "0.12.1"
setuptools = "65.5.1"
six = "1.16.0"
smmap = "5.0.0"
sniffio = "1.2.0"
sqlalchemy = "1.4.35"
sqlparse = "0.4.2"
stack-data = "0.6.1"
statsmodels = "0.13.5"
tabulate = "0.8.9"
tensorboard = "2.9.1"
tensorboard-data-server = "0.6.1"
tensorboard-plugin-wit = "1.8.1"
termcolor = "1.1.0"
userpath = "1.8.0"
wcwidth = "0.2.5"
wheel = "0.38.4"
torch = {url = "https://download.pytorch.org/whl/cu113/torch-1.10.1%2Bcu113-cp38-cp38-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu113/torchvision-0.11.2%2Bcu113-cp38-cp38-linux_x86_64.whl"}
tornado = "6.2"
tqdm = "4.64.1"
traitlets = "5.5.0"
typing-extensions = "4.3.0"
unicodedata2 = "15.0.0"
urllib3 = "1.26.11"
uvicorn = "0.18.2"
websocket-client = "1.3.2"
werkzeug = "2.1.1"
zipp = "3.8.0"
opencv-python = "^4.6.0.66"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
